--- a/Basics/style.css
+++ b/Basics/style.css
@@ -5,13 +5,14 @@
 }
 
 .grid-container{
-    background-color: #eee;
+    background-color: #000;
     max-width: 900px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(6,1fr) ;
+    /* grid-template-columns: repeat(6,1fr) ; */
     grid-template-rows: 1fr 2fr 3fr;
-    gap: 10px;
+    gap: 20px;
+    min-height: 100vh;
     
 }
 
@@ -20,12 +21,14 @@
     text-align: center;
     padding: 20px;
     border: 1px solid #777;
+   
 }
 
 .grid-container > div:nth-child(1){
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 6;
+    grid-row: 1/span 5;
 }
-.grid-container > div:nth-child(2){
+/* .grid-container > div:nth-child(2){
     grid-column:  span 3;
 }
 .grid-container > div:nth-child(3){
@@ -34,10 +37,10 @@
 .grid-container > div:nth-child(4){
     grid-column:  2/6;
     /* height: 200px; */
-}
-.grid-container > div:nth-child(5){
+/* } */
+/* .grid-container > div:nth-child(5){
     grid-column:  span 3;
 }
 .grid-container > div:nth-child(6){
     grid-column:  span 3;
-}
+}  */
